[tool.poetry]
name = "tag"
version = "0.1.0"
description = "A CLI tool for annotating files with tags"
authors = ["Luke Turner <github@luketurner.org>"]

[tool.poetry.scripts]
tag = "tag.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
pugsql = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
